design layout for the student register activity layout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="nude_light_toffee">#DFD4C7</color>
     <color name="latte">#BDAB98</color>
     <color name="dark_mocha">#201810</color>
+    <color name="creme">#FBF3ED</color>
 </resources>
