--- a/app/src/main/res/layout/activity_student_register.xml
+++ b/app/src/main/res/layout/activity_student_register.xml
@@ -4,97 +4,155 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/neutralpattern"
     tools:context=".StudentRegister">
+
+    <TextView
+        android:id="@+id/quote"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="30dp"
+        android:background="@color/creme"
+        android:fontFamily="@font/lobster"
+        android:text="@string/quote"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/firstNameEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/firstNameEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="160dp"
+        android:background="@color/white"
+        android:fontFamily="@font/calistoga"
+        android:hint="@string/first_name"
+        android:minHeight="48dp"
+        android:autofillHints="creditCardNumber"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColorHint="@color/dark_mocha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="First Name"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="274dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/lastNameEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:fontFamily="@font/calistoga"
+        android:hint="@string/last_name"
+        android:autofillHints="lastName"
+        android:minHeight="48dp"
+        android:inputType="textPersonName"
+        android:textAlignment="center"
+        android:textColor="@color/dark_mocha"
+        android:textColorHint="@color/dark_mocha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Last Name"
-        android:inputType="textPersonName"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="343dp" />
+        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />
 
     <EditText
         android:id="@+id/emailEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:autofillHints="emailAddress"
+        android:fontFamily="@font/calistoga"
+        android:hint="@string/email_address"
+        android:minHeight="48dp"
+        android:inputType="textEmailAddress"
+        android:textAlignment="center"
+        android:textColor="@color/dark_mocha"
+        android:textColorHint="@color/dark_mocha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Email Address"
-        android:inputType="textEmailAddress"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="406dp" />
+        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />
 
     <EditText
         android:id="@+id/passwordEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:fontFamily="@font/calistoga"
+        android:hint="@string/password"
+        android:autofillHints="password"
+        android:minHeight="48dp"
+        android:inputType="textPassword"
+        android:textAlignment="center"
+        android:textColor="@color/dark_mocha"
+        android:textColorHint="@color/dark_mocha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Password"
-        android:inputType="textPassword"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="485dp" />
+        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
     <EditText
         android:id="@+id/addressEditText"
+        android:layout_width="0dp"
+        android:autofillHints="postalCode"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:fontFamily="@font/calistoga"
+        android:hint="@string/address"
+        android:minHeight="48dp"
+        android:inputType="textPostalAddress"
+        android:textAlignment="center"
+        android:textColor="@color/dark_mocha"
+        android:textColorHint="@color/dark_mocha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Address"
-        android:inputType="textPostalAddress"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="556dp" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
     <EditText
         android:id="@+id/creditCardEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:autofillHints="creditCardNumber"
+        android:fontFamily="@font/calistoga"
+        android:hint="@string/credit_card_information"
+        android:inputType="text"
+        android:minHeight="48dp"
+        android:textAlignment="center"
+        android:textColor="@color/dark_mocha"
+        android:textColorHint="@color/dark_mocha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addressEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="Credit Card Information"
-        android:inputType="text"
-        tools:layout_editor_absoluteX="108dp"
-        tools:layout_editor_absoluteY="622dp" />
+        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />
 
     <Button
         android:id="@+id/registerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="160dp"
+        android:fontFamily="@font/calistoga"
+        android:text="@string/register_btn"
+        android:textColor="@color/dark_mocha"
+        android:textSize="22sp"
+        app:backgroundTint="@color/creme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/creditCardEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        tools:layout_editor_absoluteX="155dp"
-        tools:layout_editor_absoluteY="667dp" />
+        app:layout_constraintTop_toBottomOf="@+id/creditCardEditText" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
