--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,30 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".Register">
 
+    <TextView
+        android:id="@+id/titleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Select Account Type"
+        android:textSize="24sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"/>
+
     <Button
         android:id="@+id/studentButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleText"
         app:layout_constraintVertical_bias="0.4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="As a Student"
-        tools:layout_editor_absoluteX="57dp"
-        tools:layout_editor_absoluteY="219dp" />
+        android:layout_marginTop="32dp"/>
 
     <Button
         android:id="@+id/tutorButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/loginButton"
+        app:layout_constraintTop_toBottomOf="@id/studentButton"
         app:layout_constraintVertical_bias="0.2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="As a Tutor"
-        tools:layout_editor_absoluteX="234dp"
-        tools:layout_editor_absoluteY="219dp" />
+        android:layout_marginTop="16dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
