--- a/app/src/main/res/layout/activity_tutor_register.xml
+++ b/app/src/main/res/layout/activity_tutor_register.xml
@@ -106,6 +106,14 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nativeLanguageSpinner" />
+    <ImageView
+        android:id="@+id/IVPreviewImage"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_below="@id/addProfilePictureButton"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp" />
 
     <Button
         android:id="@+id/registerButton"
