--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="latte">#BDAB98</color>
     <color name="dark_mocha">#201810</color>
     <color name="creme">#FBF3ED</color>
+    <color name="brown_latte">#997853</color>
 </resources>
