--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,42 +4,56 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/library"
     tools:context=".Register">
 
     <TextView
         android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:fontFamily="@font/lobster"
+        android:shadowColor="@color/black"
+        android:shadowDx="50"
+        android:shadowDy="20"
+        android:shadowRadius="10"
         android:text="Select Account Type"
-        android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/studentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/calistoga"
+        android:text="As a Student"
+        android:textColor="@color/mocha"
+        android:textSize="24sp"
+        app:backgroundTint="@color/light_beige"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleText"
-        app:layout_constraintVertical_bias="0.4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="As a Student"
-        android:layout_marginTop="32dp"/>
+        app:layout_constraintVertical_bias="0.4" />
 
     <Button
         android:id="@+id/tutorButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:fontFamily="@font/calistoga"
+        android:text="As a Tutor"
+        android:textColor="@color/light_beige"
+        android:textSize="24sp"
+        app:backgroundTint="@color/mocha_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/studentButton"
-        app:layout_constraintVertical_bias="0.2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="As a Tutor"
-        android:layout_marginTop="16dp"/>
+        app:layout_constraintVertical_bias="0.2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
