--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="mocha">#201810</color>
     <color name="light_beige">#F2E0CC</color>
     <color name="mocha_light">#B28D6A</color>
+    <color name="latte">#D9C7B6</color>
+    <color name="latte_brown">#C8AE96</color>
 </resources>
