--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -24,4 +24,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
+    <TextView
+        android:id="@+id/messagetextView"
+        android:layout_width="317dp"
+        android:layout_height="133dp"
+        android:layout_marginTop="28dp"
+        android:text="asdsadasdasdasdasdas"
+        app:layout_constraintTop_toBottomOf="@+id/logoutButton"
+        tools:layout_editor_absoluteX="205dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
