--- a/app/src/main/res/layout/suspension_dialog.xml
+++ b/app/src/main/res/layout/suspension_dialog.xml
@@ -23,4 +23,10 @@
         android:layout_height="wrap_content"
         android:text="Suspend for 7 Days" />
 
+    <Button
+        android:id="@+id/buttonIndefinitely"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Suspend indefinitely" />
+
 </LinearLayout>
