--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -56,4 +56,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoutButton" />
 
+    <Button
+        android:id="@+id/topicButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Topics"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/messagetextView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
