--- a/app/src/main/res/layout/activity_admin_home.xml
+++ b/app/src/main/res/layout/activity_admin_home.xml
@@ -14,8 +14,7 @@
         android:layout_marginStart="47dp"
         android:layout_marginTop="177dp"
         android:layout_marginEnd="47dp"
-        android:background="@color/latte_brown"
-        android:fontFamily="@font/calistoga"
+        android:fontFamily="@font/lobster"
         android:text="Welcome to Tutron. You are logged in as an Admin"
         android:textAlignment="center"
         android:textSize="20sp"
