--- a/app/src/main/res/layout/offertopiclist.xml
+++ b/app/src/main/res/layout/offertopiclist.xml
@@ -2,23 +2,25 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/library"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/textViewTopicsTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/latte"
+        android:fontFamily="@font/calistoga"
+        android:padding="16dp"
         android:text="Topics"
+        android:textAlignment="center"
         android:textSize="20sp"
-        android:textStyle="bold"
-        android:padding="16dp" />
+        android:textStyle="bold" />
 
     <ListView
         android:id="@+id/listViewTopics"
         android:layout_width="match_parent"
         android:layout_height="361dp" />
-
-
 
 
 </LinearLayout>
