--- a/app/src/main/res/layout/topicdetail.xml
+++ b/app/src/main/res/layout/topicdetail.xml
@@ -13,7 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:background="@color/light_beige"
         android:fontFamily="@font/calistoga"
+        android:textAlignment="center"
         android:textAppearance="?android:textAppearanceMedium"
         android:textStyle="bold" />
 
@@ -22,14 +24,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:fontFamily="@font/calistoga" />
+        android:background="@color/light_beige"
+        android:fontFamily="@font/calistoga"
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/textViewExperienceDescription"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:fontFamily="@font/calistoga" />
+        android:background="@color/light_beige"
+        android:fontFamily="@font/calistoga"
+        android:textAlignment="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
