--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,8 +44,8 @@
 
     <TextView
         android:id="@+id/messagetextView"
-        android:layout_width="317dp"
-        android:layout_height="133dp"
+        android:layout_width="319dp"
+        android:layout_height="72dp"
         android:layout_marginTop="28dp"
         android:layout_marginBottom="212dp"
         android:background="@color/latte_brown"
@@ -53,6 +53,7 @@
         android:textColor="@color/mocha"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoutButton" />
 
@@ -65,5 +66,31 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/messagetextView" />
+    <Button
+        android:id="@+id/requestsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/calistoga"
+        android:text="Requests"
+        android:textSize="24sp"
+        app:backgroundTint="@color/latte_brown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/topicButton" />
+    <Button
+        android:id="@+id/profileButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/calistoga"
+        android:text="Profile"
+        android:textSize="24sp"
+        app:backgroundTint="@color/latte_brown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/requestsButton" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
